react with bootstrap

--- a/react-client/src/css/main.css
+++ b/react-client/src/css/main.css
@@ -6313,4 +6313,4 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  background-color: blue !important; }
+  background-color: lightblue; }
